Fixed card spacing projects section

--- a/src/Projects.scss
+++ b/src/Projects.scss
@@ -4,19 +4,25 @@ $breakpoint-sml-cellphone: 500px;
 $breakpoint-xsml-cellphone: 400px;
 
 .container {
-    //     background: url("./assets/forest.webp");
-    //     background-size: cover;
-    //     background-repeat: no-repeat;
     height: 100vh;
     color: rgb(241, 241, 241);
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 
+    .projects {
+        position: absolute;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
     .card {
+        margin: 0 5% 10% 5%;
         padding: 5%;
-        width: 250px;
-        height: 30vh;
+        width: 30vw;
+        height: 20vh;
         background: rgba(255, 255, 255, 0.1);
         box-shadow: 0 25px 45px rgba(0, 0, 0, 0.2);
         border-radius: 30px;
@@ -34,6 +40,6 @@ $breakpoint-xsml-cellphone: 400px;
     background: url("./assets/forest.webp");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 100vh;
     width: 100vw;
 }
